[gd_scene load_steps=5 format=3 uid="uid://5yonpmielwor"]

[ext_resource type="Script" path="res://scenes/Menu/menu.gd" id="1_tos7c"]
[ext_resource type="PackedScene" uid="uid://baplf6rofo5er" path="res://scenes/Textures/red_button.tscn" id="2_m37sx"]
[ext_resource type="Texture2D" uid="uid://506axnpkyp41" path="res://art/main-room.png" id="2_y5vfa"]

[sub_resource type="Theme" id="Theme_kqmd3"]
/colors/background_color = Color(1, 1, 1, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = 26.0
offset_right = 75.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_kqmd3")
script = ExtResource("1_tos7c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -77.0
offset_top = -26.0
offset_right = 1844.0
offset_bottom = 1053.0
texture = ExtResource("2_y5vfa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -776.0
offset_right = 1375.0
offset_bottom = 972.0
grow_vertical = 0
scale = Vector2(0.3, 0.3)

[node name="StartLayout" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" parent="VBoxContainer/StartLayout" instance=ExtResource("2_m37sx")]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/StartLayout"]
layout_mode = 2
text = "Start"

[node name="OptionsLayout" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionsButton" parent="VBoxContainer/OptionsLayout" instance=ExtResource("2_m37sx")]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/OptionsLayout"]
layout_mode = 2
text = "Options"

[node name="QuitLayout" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="QuitButton" parent="VBoxContainer/QuitLayout" instance=ExtResource("2_m37sx")]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/QuitLayout"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartLayout/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsLayout/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitLayout/QuitButton" to="." method="_on_quit_button_pressed"]
